--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -2596,6 +2596,37 @@ span.page-views {
 
   .about-me-page {
 
+    .my-fav-list{
+      width: 1100px;
+      .totaldownloads{
+        margin:0;
+        padding: 20px;
+        text-align: right;
+      }
+      .smaller{
+        font-size: smaller;
+      }
+      .row{        
+        border-bottom:1px solid #ccc;
+        padding-top:15px;
+        padding-bottom:15px;
+      }      
+
+      .rating{
+        width: 60px !important;
+        font-size: 10pt;
+      }
+      .downloadhistory-image{
+        width: 50px;
+        height: 50px;
+        float: left; 
+        margin-right: 15px;      
+      }
+      .nowrap{
+        white-space: nowrap;
+      }
+    }
+
     > .head-wrap {
       padding-top: 1em;
       height: auto;
@@ -2860,6 +2891,7 @@ span.page-views {
         width: 100%;
         float: left;
       }
+
 
       .my-products-list {
 
@@ -5439,6 +5471,7 @@ img.imgpopover
       .header{        
         border-top:1px solid #ccc;
         padding-top:15px;
+        padding-bottom:15px;
       }
       .subheader{       
        background-color: #ddd
