--- a/application/modules/default/views/scripts/user/aboutme.phtml
+++ b/application/modules/default/views/scripts/user/aboutme.phtml
@@ -73,63 +73,58 @@ $isSupporter = $this->stat['donationIssupporter'];
                                <?php endif; ?>
                             </div>
                             <div class="about-footer">                                                            
-                             
-                               
+                                <div class="col-container" >
+                                    <div class="details stat" >
+                                        <h3>Statistics</h3>
+                                        <div  class="statContent" >
+                                            <div class="row ">
+                                               <span class="cnt"><?=$this->stat['cntProducts']?> </span> Products
+                                            </div>
+                                            <div class="row">
+                                               <span class="cnt"><?=$this->stat['cntComments']?> </span> Comments
+                                            </div>
+                                            <div class="row">
+                                               Likes <span class="cnt"> <?=$this->stat['cntLikesHeGave']?> </span>Products
+                                            </div>
+                                            <div class="row">
+                                               Got <span class="cnt"> <?=$this->stat['cntLikesHeGot']?> </span>Likes <i class="fa fa-heart" style="color:#8e44ad" aria-hidden="true"></i>
 
-                            <div class="col-container" >
-                            <div class="details stat" >
-                                <h3>Statistics</h3>
-                                <div  class="statContent" >
-                                    <div class="row ">
-                                       <span class="cnt"><?=$this->stat['cntProducts']?> </span> Products
-                                    </div>
-                                    <div class="row">
-                                       <span class="cnt"><?=$this->stat['cntComments']?> </span> Comments
-                                    </div>
-                                    <div class="row">
-                                       Likes <span class="cnt"> <?=$this->stat['cntLikesHeGave']?> </span>Products
-                                    </div>
-                                    <div class="row">
-                                       Got <span class="cnt"> <?=$this->stat['cntLikesHeGot']?> </span>Likes <i class="fa fa-heart" style="color:#8e44ad" aria-hidden="true"></i>
+                                            </div>
+                                            <?php /*
+                                             <div class="row">
+                                               <span class="cnt"><?=$this->stat['cntPageviews']?> </span> Pageviews
+                                            </div>
+                                            */
+                                            ?>
+                                          <?php 
+                                              if($this->stat['donationMax'] !=null && !$isSupporter){ // inactive supporter
+                                          ?>
+                                           <div class="row">
+                                             <span class="cnt">Inactive supporter since: <?=$helperPrintDate->printDate(date('Y-m-d H:i:s', strtotime($this->stat['donationMax'] . ' +1 year')))?></span> 
+                                          </div>
+                                          <?php } ?>
 
-                                    </div>
-                                    <?php /*
-                                     <div class="row">
-                                       <span class="cnt"><?=$this->stat['cntPageviews']?> </span> Pageviews
-                                    </div>
-                                    */
-                                    ?>
-                                  <?php 
-                                      if($this->stat['donationMax'] !=null && !$isSupporter){ // inactive supporter
-                                  ?>
-                                   <div class="row">
-                                     <span class="cnt">Inactive supporter since: <?=$helperPrintDate->printDate(date('Y-m-d H:i:s', strtotime($this->stat['donationMax'] . ' +1 year')))?></span> 
-                                  </div>
-                                  <?php } ?>
+                                            <?php 
+                                                if($isSupporter){
+                                            ?>                                     
+                                             <div class="row">                                     
+                                               <span>Supporter since: <?=$helperPrintDate->printDate($this->stat['donationMin'])?> </span> 
+                                            </div>
+                                              <div class="row">                                     
+                                               <span>Supporter until: <?=$helperPrintDate->printDate(date('Y-m-d H:i:s', strtotime($this->stat['donationMax'] . ' +1 year')))?> </span> 
+                                            </div>                                     
+                                            <?php } ?>
+                                             <div class="row">                                     
+                                               <span class="">Last time active: <?=$helperPrintDate->printDate($this->stat['userLastActiveTime'])?> </span> 
+                                            </div>
+                                             <div class="row">                                                                            
+                                                <span class="text">Joined: <?=$helperPrintDate->printDate($this->member->created_at);?></span>                                       
+                                            </div>
 
-                                    <?php 
-                                        if($isSupporter){
-                                    ?>                                     
-                                     <div class="row">                                     
-                                       <span>Supporter since: <?=$helperPrintDate->printDate($this->stat['donationMin'])?> </span> 
+
+                                        </div>
                                     </div>
-                                      <div class="row">                                     
-                                       <span>Supporter until: <?=$helperPrintDate->printDate(date('Y-m-d H:i:s', strtotime($this->stat['donationMax'] . ' +1 year')))?> </span> 
-                                    </div>                                     
-                                    <?php } ?>
-                                     <div class="row">                                     
-                                       <span class="">Last time active : <?=$helperPrintDate->printDate($this->stat['userLastActiveTime'])?> </span> 
-                                    </div>
-                                     <div class="row">                                                                            
-                                        <span class="text">Joined : <?=$helperPrintDate->printDate($this->member->created_at);?></span>                                       
-                                    </div>
-                                    
-                                   
                                 </div>
-                            </div>
-                        </div>
-
-                             
                             </div>
                             <?php
                             $helperUserRole = new Backend_View_Helper_UserRole();
@@ -137,31 +132,46 @@ $isSupporter = $this->stat['donationIssupporter'];
                             ?>
 
                             <?php if (Default_Model_DbTable_MemberRole::ROLE_NAME_ADMIN == $userRoleName) : ?>
-                                <div class="pull-right">
+                            <div class="about-footer">                                                            
+                                <div class="col-container" >
+                                    <div class="details stat" >
+                                        <h3>Admin-Panel</h3>
+                                        <div  class="statContent" >
+                                            <div class="row ">
+                                               Email: <?= $this->member->mail ?>
+                                            </div>
+                                            <div class="row ">
+                                               Paypal: <?= $this->member->paypal_mail ?>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="pull-right">
                                 <span class="page-views">
-                                <a id="linktohive" target="_blank" href="http://cp1.hive01.com/usermanager/search.php?username=<?= $this->member->username ?>">link to hive</a>
-                                <a id="delete-this" href="/backend/user/delete?member_id=<?= $this->member->member_id ?>">delete user</a>
+                                    <a id="linktohive" target="_blank" href="http://cp1.hive01.com/usermanager/search.php?username=<?= $this->member->username ?>">link to hive</a>
+                                    <a id="delete-this" href="/backend/user/delete?member_id=<?= $this->member->member_id ?>">delete user</a>
                                 </span>
                                 <script>
-                                    $('#delete-this').on('click', function (event) {
+                                $('#delete-this').on('click', function (event) {
 
-                                        event.stopPropagation();
-                                        var target = $(this).attr('href');
+                                    event.stopPropagation();
+                                    var target = $(this).attr('href');
 
-                                        $.ajax({
-                                            url: target,
-                                            success: function (results) {
-                                                alert('User deleted successfully');
-                                            },
-                                            error: function() {
-                                                alert('Service is temporarily unavailable.');
-                                            }
-                                        });
-
-                                        return false;
+                                    $.ajax({
+                                        url: target,
+                                        success: function (results) {
+                                            alert('User deleted successfully');
+                                        },
+                                        error: function() {
+                                            alert('Service is temporarily unavailable.');
+                                        }
                                     });
+
+                                    return false;
+                                });
                                 </script>
-                                </div>
+                            </div>
                             <?php endif; ?>
                         </article>
                     </div>
@@ -222,11 +232,7 @@ $isSupporter = $this->stat['donationIssupporter'];
                                     Comments (<?=$this->comments->getTotalItemCount()?>)
                                 </a>
                             </li>
-                            <li>
-                                <a href="#user-favs" data-toggle="tab" role="tab"  aria-controls="user-favs">
-                                    Favs (<?=$this->likes->getTotalItemCount()?>)
-                                </a>
-                            </li>
+                            
                           
                         </ul>
                         </div>
@@ -292,11 +298,6 @@ $isSupporter = $this->stat['donationIssupporter'];
                             <div  role="tabpanel" class="tab-pane " id="user-comments">                                    
                                   <?php echo $this->render('user/partials/loopMyComments.phtml'); ?>
                             </div>
-                            <div  role="tabpanel" class="tab-pane " id="user-favs">       
-                                    <div class="my-fav-list">                                                                   
-                                  <?php echo $this->render('user/partials/aboutme-likes.phtml'); ?>
-                                  </div>
-                            </div>                            
 
                         </div>
 
@@ -418,7 +419,6 @@ $isSupporter = $this->stat['donationIssupporter'];
     '    $(document).ready(function(){
              AboutMePage.setup("'.$this->member->username.'");
             AboutMeMyProjectsPaging.setup();
-            AboutMeMyProjectsPagingButton.setup();
         });
     ');
 
