updated solr search interface for users

--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -127,15 +127,15 @@ $userRoleName = $helperUserRole->userRole();
             .dropdown-menu > li > a{
                 font-size: 12px;
             }
-        .dropdown:hover .dropdown-menu {
+        .metamenu .dropdown:hover .dropdown-menu {
             margin-left: -16px;
         }
-        .dropdown-menu li{
+        .metamenu .dropdown-menu li{
             width: 100%;
         }
 
-        ul.dropdown-menu  li span{ color:#999; }
-        ul.dropdown-menu  li.active span{ color:#eee; }
+        .metamenu ul.dropdown-menu  li span{ color:#999; }
+        .metamenu ul.dropdown-menu  li.active span{ color:#eee; }
     </style>
 
     <div class="small metamenu" >   
