--- a/application/modules/default/views/scripts/settings/partials/email.phtml
+++ b/application/modules/default/views/scripts/settings/partials/email.phtml
@@ -21,7 +21,7 @@
  **/
 
 $modelMember = new Default_Model_MemberEmail();
-$listEmails = $modelMember->fetchAllMailAdresses($this->member->member_id);
+$listEmails = $modelMember->fetchAllMailAddresses($this->member->member_id);
 ?>
 
 
