--- a/application/modules/backend/views/scripts/memberpayout/index.phtml
+++ b/application/modules/backend/views/scripts/memberpayout/index.phtml
@@ -43,6 +43,19 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
                 <option value="201710" <?php if($lastMonth == '201710') echo 'selected=1'; ?> >2017 Oct</option>
                 <option value="201711" <?php if($lastMonth == '201711') echo 'selected=1'; ?> >2017 Nov</option>
                 <option value="201712" <?php if($lastMonth == '201712') echo 'selected=1'; ?> >2017 Dect</option>
+                
+                <option value="201801" <?php if($lastMonth == '201801') echo 'selected=1'; ?> >2018 Jan</option>
+                <option value="201802" <?php if($lastMonth == '201802') echo 'selected=1'; ?> >2018 Feb</option>
+                <option value="201803" <?php if($lastMonth == '201803') echo 'selected=1'; ?> >2018 Mar</option>
+                <option value="201804" <?php if($lastMonth == '201804') echo 'selected=1'; ?> >2018 Apr</option>
+                <option value="201805" <?php if($lastMonth == '201805') echo 'selected=1'; ?> >2018 May</option>
+                <option value="201806" <?php if($lastMonth == '201806') echo 'selected=1'; ?> >2018 Jun</option>
+                <option value="201807" <?php if($lastMonth == '201807') echo 'selected=1'; ?> >2018 Jul</option>
+                <option value="201808" <?php if($lastMonth == '201808') echo 'selected=1'; ?> >2018 Aug</option>
+                <option value="201809" <?php if($lastMonth == '201809') echo 'selected=1'; ?> >2018 Sep</option>
+                <option value="201810" <?php if($lastMonth == '201810') echo 'selected=1'; ?> >2018 Oct</option>
+                <option value="201811" <?php if($lastMonth == '201811') echo 'selected=1'; ?> >2018 Nov</option>
+                <option value="201812" <?php if($lastMonth == '201812') echo 'selected=1'; ?> >2018 Dect</option>
             </select>
             
         Status:
