--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -164,7 +164,7 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
             <span class="newsTitle"> News </span>
             <div class="prod-widget-box right bgwhite " id="rss-feeds"> </div>                  
       
-        <span class="newsTitle"> Lastest 10 Comments </span>
+        <span class="newsTitle"> Lastest Comments </span>
          <div class="prod-widget-box right bgwhite" id="lastcomments">
                 <?php
                 foreach ($this->comments as $this->comment) {
