--- a/httpdocs/theme/flatui/css/style.css
+++ b/httpdocs/theme/flatui/css/style.css
@@ -614,7 +614,7 @@ a.partial{
   padding:3px 6px;
 }
 
-.metamenu .dropdown:hover .dropdown-menu {
+.dropdown:hover .dropdown-menu {
     display: block;
     margin-top: 0; /*remove the gap so it doesn't close*/
  }
