--- a/application/modules/default/views/scripts/user/partials/loopLike.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopLike.phtml
@@ -27,26 +27,9 @@
 	</div>
 	
 	
-	<div class="col-lg-1" >
-		<div id="container-follow<?=$this->file->project_id?>" style="display: block;float:left;margin-right: 3px">		
-		<?php 
-		if($this->file->project_member_id<> $this->authMember->member_id){
-			echo $this->partial(
-			    '/product/follow.phtml',
-			    array(
-			        "authMember"  => $this->authMember,
-			        "project_id" => $this->file->project_id
-			    )
-			);
-		}
-		?>
-
-		
-		</div>			
-	</div>
-
-	<div class="col-lg-2" >
-	<?=$this->printDate($this->file->created_at)?>
+	<div class="col-lg-3" >
+		at <?=$this->printDate($this->file->created_at)?> 
+		<i class="fa fa-heart" aria-hidden="true" style="color:#8e44ad;"></i>        		
 	</div>
 </div>
 
