--- a/application/modules/default/views/scripts/product/followp.phtml
+++ b/application/modules/default/views/scripts/product/followp.phtml
@@ -28,8 +28,7 @@ if($this->authMember){
 	$member_id = $this->authMember->member_id;
 	$isFollower = $this->userFollowsProject($member_id, $this->project_id);
 }
-
-//$heartatt = 'class="partialbuttonheartdetail"';    	
+ 	
 $heartatt = '';    	
 if ($member_id && $isFollower) {
 	$urlUserFollows = $this->buildProductUrl($this->project_id, 'unfollowp');					
@@ -41,22 +40,20 @@ $heartatt = $heartatt. 'role="button" data-fragment=""  '
 	      .' data-target="#container-follow'.$this->project_id.'"'
 	      .' data-href="'.$urlUserFollows.'"'
 	      .' data-auth="'.$member_id.'"';
-//$out = '<button ' .$heartatt.'>';
-$out = '';
+$out ='<div role="button" class="partialbuttonheartdetail" '.$heartatt.'>';
 if($cntheart>0){
        if ($isFollower){
-            $out = $out. '<i class="fa fa-heart heartproject partialbuttonheartdetail" aria-hidden="true" '.$heartatt.'></i>';
-            $out = $out. '<span class="heartnumber small">'.$cntheart.'</span>';
+            $out = $out. '<i class="fa fa-heart heartproject " aria-hidden="true" '.$heartatt.'></i>';
+            $out = $out. '<span class="heartnumber small " >'.$cntheart.'</span>';
        }else{
-            $out = $out. '<i class="fa fa-heart-o heartgrey partialbuttonheartdetail" aria-hidden="true" '.$heartatt.'></i>';
-            $out = $out. '<span class="heartnumber heartnumberpurple small">'.$cntheart.'</span>';
+            $out = $out. '<i class="fa fa-heart-o heartgrey " aria-hidden="true" '.$heartatt.'></i>';
+            $out = $out. '<span class="heartnumber heartnumberpurple small  " >'.$cntheart.'</span>';
        }
 }else{
-            $out = $out. '<i class="fa fa-heart-o heartgrey partialbuttonheartdetail" aria-hidden="true" '.$heartatt.'></i>';        
+            $out = $out. '<i class="fa fa-heart-o heartgrey " aria-hidden="true" '.$heartatt.'></i>';        
 }
 
- //$out = $out.'</button>';
-
+ $out = $out.'</div>';
 echo $out;
 ?>
 
