--- a/application/modules/default/views/scripts/user/partials/aboutme-likes.phtml
+++ b/application/modules/default/views/scripts/user/partials/aboutme-likes.phtml
@@ -48,7 +48,7 @@
 
         <div class="col-lg-3" >                                       
                     <i class="fa fa-heart" aria-hidden="true" style="color:#8e44ad;"></i>               
-                    at <?=$this->printDate($file->created_at)?>
+                    <?=$this->printDate($file->created_at)?>
         </div>
 
       </div>
