--- a/application/modules/default/views/scripts/user/partials/loopLike.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopLike.phtml
@@ -27,9 +27,9 @@
 	</div>
 	
 	
-	<div class="col-lg-3" >
-		at <?=$this->printDate($this->file->created_at)?> 
+	<div class="col-lg-3" >		
 		<i class="fa fa-heart" aria-hidden="true" style="color:#8e44ad;"></i>        		
+		<?=$this->printDate($this->file->created_at)?> 
 	</div>
 </div>
 
