--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1690,25 +1690,28 @@ ul.meta-nav-top
             float: right;           
             z-index: 100;
             margin-right: 10px;
+            width: 70px;
         }
         .heartproject{
           position:relative;
           color:#8e44ad; 
           font-size: 45px;
+          float: right;
         }
 
         .heartgrey{
           position:relative;
           color:#C8C8C8; 
           font-size: 45px;
+           float: right;
         }
        
 
         span.heartnumber{
           z-index: 3;
-          position: absolute; 
-          margin-left:-25px;
-          margin-top:15px;
+          position: relative; 
+          left: 45px;
+          top: 10px;
           color:white;
         }
 
