--- a/application/modules/default/views/scripts/user/partials/userHeader.phtml
+++ b/application/modules/default/views/scripts/user/partials/userHeader.phtml
@@ -58,6 +58,13 @@ $helperMember = new Default_View_Helper_BuildMemberUrl();
             <?= $this->translate('Download History') ?>
         </a>
     </li>
+
+    <li class="<?php echo $this->tab == 'likes' ? 'active' : ''; ?>">
+        <a href="<?php echo $helperMember->buildMemberUrl($this->member->member_id, 'likes'); ?>">
+            <i class="fa fa-heart" aria-hidden="true"></i>
+            <?= $this->translate('Favs') ?>
+        </a>
+    </li>
     
     <li class="<?php echo $this->tab == 'activities' ? 'active' : ''; ?>">
         <a href="<?php echo $helperMember->buildMemberUrl($this->member->member_id, 'activities'); ?>">
