backend: report comments

--- a/application/modules/backend/views/scripts/reportcomments/index.phtml
+++ b/application/modules/backend/views/scripts/reportcomments/index.phtml
@@ -40,7 +40,7 @@
             paging: true,
             title: 'Table of Comment Reports',
             sorting: true, //Enable sorting
-            defaultSorting: 'reports_comment.created_at DESC', //Set default sorting
+            defaultSorting: 'last_reported_at DESC', //Set default sorting
             actions: {
                 listAction: '/backend/reportcomments/list',
                 //createAction: '/backend/reportcomments/create',
